# ajla

./: .gitignore  AUTHORS  ChangeLog  Makefile.t  README  addrlock.c  addrlock.h  ajla.c  ajla.h  amalloc.c  amalloc.h  args.c  args.h  arindex.h  arithm-b.h  arithm-b.inc  arithm-i.h  arithm-i.inc  arithm-r.h  arithm-r.inc  arm64-w.inc  arm64-x.inc  array.c  array.h  arrayc.c  arrayu.c  arrayu.h  arrayuc.c  asm-1.inc  asm-alph.inc  asm-arm.inc  asm-hppa.inc  asm-ia64.inc  asm-loon.inc  asm-ppc.inc  asm-rv.inc  asm-s390.inc  asm-spar.inc  asm-x86.inc  asm.c  (+165 more)
charsets/: cp437.c8  cp737.c8  cp850.c8  cp852.c8  cp866.c8  iso88591.c8  iso88592.c8  iso88593.c8  iso88594.c8  iso88595.c8  iso88596.c8  iso88597.c8  iso88598.c8  iso88599.c8  iso_5910.c8  iso_5911.c8  iso_5913.c8  iso_5914.c8  iso_5915.c8  iso_5916.c8  koi8r.c8  koi8ru.c8  koi8u.c8  tcvn5712.c8  usascii.c8  viscii.c8  win_1250.c8  win_1251.c8  win_1252.c8  win_1256.c8  win_1257.c8  xcp866u.c8  xkamcs.c8  xmac.c8  xmacce.c8
newlib/: charset.ajla  ex_codes.ajla  ffi.ajla  glob.ajla  io.ajla  msgqueue.ajla  mutex.ajla  pcode.ajla  socket.ajla  socket_consts.ajla  spawn.ajla  start.ajla  system.ajla  timezone.ajla  treemap.ajla  uni_table.ajla  z3.ajla
newlib/compiler/: compiler.ajla  selfopt.ajla
newlib/compiler/common/: gvn.ajla
newlib/compiler/optimize/: defs.ajla  evaluate.ajla  inline.ajla  spec.ajla  ssa.ajla  utils.ajla  verify.ajla
newlib/compiler/parser/: alloc.ajla  dict.ajla  export.ajla  expression.ajla  function.ajla  gen.ajla  gen2.ajla  istring.ajla  local_type.ajla  parser.ajla  statement.ajla  token.ajla  type.ajla  unit.ajla  util.ajla
newlib/private/: long.ajla  longreal.ajla  math.ajla  rational.ajla  show.ajla
newlib/ui/: curses.ajla  event.ajla  termcap.ajla  widget.ajla
newlib/ui/widget/: button.ajla  common.ajla  dialog.ajla  fkeys.ajla  mainmenu.ajla  menu.ajla  msgbox.ajla  progress.ajla  text.ajla  vselect.ajla
programs/acmd/: README.txt  acmd.ajla  common.ajla  copy.ajla  defs.ajla  edit.ajla  error.ajla  panel.ajla  prompt.ajla  view.ajla
programs/test/: empty.ajla  test-fp.ajla  test.ajla
scripts/: consts.ajla  consts.txt  socket.txt  update.sh
scripts/charset/: 7bit.cp  7bit.cpx  8859_1.cpx  8859_10.cpx  8859_11.cpx  8859_13.cpx  8859_14.cpx  8859_15.cpx  8859_16.cpx  8859_2.cpx  8859_3.cpx  8859_4.cpx  8859_5.cpx  8859_6.cpx  8859_7.cpx  8859_8.cpx  8859_9.cpx  cp1125.cpx  cp1250.cpx  cp1251.cpx  cp1252.cpx  cp1256.cpx  cp1257.cpx  cp437.cpx  cp737.cpx  cp850.cpx  cp852.cpx  cp866.cpx  gen_charset8.ajla  kamen.cp  kamen.cpx  koi8_r.cpx  koi8_ru.cp  koi8_ru.cpx  koi8_u.cpx  mac_lat2.cpx  macroman.cpx  tcvn5712.cp  tcvn5712.cpx  viscii.cp  (+2 more)
stdlib/: box.ajla  charset.ajla  ex_codes.ajla  exception.ajla  ffi.ajla  glob.ajla  heap.ajla  io.ajla  pcode.ajla  prng.ajla  signal.ajla  socket.ajla  spawn.ajla  start.ajla  system.ajla  treemap.ajla  uni_case.ajla  uni_fallback.ajla  z3.ajla
stdlib/compiler/: compiler.ajla  selfopt.ajla
stdlib/compiler/common/: blob.ajla  evaluate.ajla
stdlib/compiler/optimize/: defs.ajla  inline.ajla  spec.ajla  ssa.ajla  utils.ajla  verify.ajla
stdlib/compiler/parser/: dict.ajla  export.ajla  expression.ajla  function.ajla  gen.ajla  gen2.ajla  local_type.ajla  parser.ajla  statement.ajla  token.ajla  type.ajla  unit.ajla  util.ajla
stdlib/private/: fixed_point.ajla  long.ajla  math.ajla  show.ajla
stdlib/ui/: curses.ajla  event.ajla  rect.ajla  termcap.ajla
stdlib/ui/widget/: button.ajla  checkbox.ajla  common.ajla  display.ajla  fkeys.ajla  input.ajla  menu.ajla  progress.ajla  text.ajla  vselect.ajla
texts/: classes.dia  parallel.dia  tutorial.html
